src/objects/Platform_Event_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <description>What was the Action when this error occurred.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Publish</fullName>
                </value>
                <value>
                    <fullName>Consume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_And_Method__c</fullName>
        <description>Class and method that is writing the Error.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Class and method that is writing the Error.</inlineHelpText>
        <label>Class And Method</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Handling_Status__c</fullName>
        <label>Error Handling Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Ignored</fullName>
                </value>
                <value>
                    <fullName>Assigned to Source System</fullName>
                </value>
                <value>
                    <fullName>Fixing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Handling_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who is looking into the Error.</description>
        <inlineHelpText>User who is looking into the Error.</inlineHelpText>
        <label>Error Handling User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Platform_Event_Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Short error message. Typically from the program making this entry.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Error message from the program that caught the exception.</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSource__c</fullName>
        <description>Source of the Event. In Publish scenario, it is SELF.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>SELF or some external system that created the source event.</inlineHelpText>
        <label>EventSource</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_String__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event String</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>The name of the event that was being processed when this error occurred.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the Event when this error happened.</inlineHelpText>
        <label>Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Error__c</fullName>
        <description>Full exception error message.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Full exception error message.</inlineHelpText>
        <label>Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>The ID in the System that Published the Event. Would be null in Publish Action.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Nulll if Publishing or ID in the consuming event.</inlineHelpText>
        <label>ExternalID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Error severity.</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fatal Error - Bailing out</fullName>
                </value>
                <value>
                    <fullName>Recoverable Error - Published/Consumed</fullName>
                </value>
                <value>
                    <fullName>Error Ignored</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
                <value>
                    <fullName>Success Log</fullName>
                </value>
                <value>
                    <fullName>Error-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Platform Event Error Log</label>
    <listViews>
        <fullName>All_Order_Platform_Events</fullName>
        <columns>NAME</columns>
        <columns>EventSource__c</columns>
        <columns>Action__c</columns>
        <columns>Exception_Error__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>startsWith</operation>
            <value>order,Order</value>
        </filters>
        <label>All Order Platform Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Platform_Events_Log</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Event__c</columns>
        <columns>Action__c</columns>
        <columns>EventSource__c</columns>
        <columns>Exception_Error__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Platform Events Log</label>
    </listViews>
    <listViews>
        <fullName>Error_only_Platform_Events</fullName>
        <booleanFilter>(1 AND 4) or ( 2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Event__c</columns>
        <columns>Action__c</columns>
        <columns>EventSource__c</columns>
        <columns>Class_And_Method__c</columns>
        <columns>Exception_Error__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Severity__c</field>
            <operation>notEqual</operation>
            <value>Success Log</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>order</value>
        </filters>
        <filters>
            <field>Severity__c</field>
            <operation>notEqual</operation>
            <value>Informational,Success Log</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>notEqual</operation>
            <value>order</value>
        </filters>
        <label>Error only Platform Events</label>
    </listViews>
    <nameField>
        <displayFormat>PEEL-{0000000}</displayFormat>
        <label>Error</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Event Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>